temporary fix to solve blog text beign cut off

--- a/source/stylesheets/blog.css.scss
+++ b/source/stylesheets/blog.css.scss
@@ -153,8 +153,6 @@ body.blog.responsive {
       list-style: disc;
       li {
         max-width: 100% !important;
-        overflow: hidden;
-        white-space: nowrap;
         code {
           overflow-x: scroll;
         }
